--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@origami-network/cli-step-publish-s3",
   "version": "0.0.0",
   "description": "Module that publish the folder to AWS S3 bucket.",
-  "main": "lib/get-objects.js",
+  "main": "lib/get-files.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec lib/**/**.spec.js",
+    "test:cover": "nyc --report-dir dist/test -r lcov -r text npm run test"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,21 @@
   "bugs": {
     "url": "https://github.com/origami-network/node-cli-step-publish-s3/issues"
   },
-  "homepage": "https://github.com/origami-network/node-cli-step-publish-s3#readme"
+  "homepage": "https://github.com/origami-network/node-cli-step-publish-s3#readme",
+  "nyc": {
+    "exclude": [
+      "**/*.spec.js",
+      "specs",
+      "dist"
+    ]
+  },
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-spies": "^1.0.0",
+    "mocha": "^5.0.5",
+    "nyc": "^11.6.0"
+  }
 }
