--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/get-files.js",
   "scripts": {
     "test": "mocha --reporter spec lib/**/**.spec.js",
-    "test:cover": "nyc --report-dir dist/test -r lcov -r text npm run test"
+    "test:cover": "nyc --report-dir dist/test -r lcov -r text npm run test",
+    "test:cover:publish": "cat dist/test/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
+    "coveralls": "^3.0.0",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0"
   }
