--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
     "coveralls": "^3.0.0",
+    "fs-extra": "^5.0.0",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0"
   }
