--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Module that publish the folder to AWS S3 bucket.",
   "main": "lib/get-files.js",
+  "bin": {
+    "cli-publish-s3": "./cli.js"
+  },
   "scripts": {
     "test": "mocha --reporter spec lib/**/**.spec.js",
     "test:cover": "nyc --report-dir dist/test -r lcov -r text npm run test",
@@ -35,5 +38,10 @@
     "fs-extra": "^5.0.0",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.218.1",
+    "commander": "^2.15.1",
+    "mime-types": "^2.1.18"
   }
 }
