Specify command line interface

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "mocha --reporter spec lib/**/**.spec.js",
     "test:cover": "nyc --report-dir dist/test -r lcov -r text npm run test",
-    "test:cover:publish": "cat dist/test/lcov.info | coveralls"
+    "test:cover:publish": "cat dist/test/lcov.info | coveralls",
+    "spec": "mocha --reporter spec specs/**/**.spec.js"
   },
   "repository": {
     "type": "git",
