--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,34 @@ node_js:
   - stable
   - '6.9'
 
+services:
+  - docker
+
+env:
+  - SPEC_AWS_ACCESS_KEY=AwsAccessKey
+  - SPEC_AWS_SECRET_KEY=AwsSecretKey
+  - SPEC_S3_REGION=us-east-1
+  - SPEC_S3_BUCKET=public
+  - SPEC_S3_ENDPOINT=127.0.0.1:9000
+
+before_install:
+  - docker pull minio/minio:RELEASE.2018-03-30T00-38-44Z
+  # TODO: Add public bucket policy from specs/minio/bucket/public/policy.json
+  - docker run --name s3 -p ${SPEC_S3_ENDPOINT}:9000 -d minio/minio:RELEASE.2018-03-30T00-38-44Z server /data
+
 install:
   - npm install
 
 script:
   - npm run test:cover
-  - npm run spec
+  - |
+    npm \
+    --aws-access-key="${SPEC_AWS_ACCESS_KEY}" \
+    --aws-secret-key="${SPEC_AWS_SECRET_KEY}" \
+    --s3-region="${SPEC_S3_REGION}" \
+    -s3-bucket="${SPEC_S3_BUCKET}" \
+    --s3-endpoint="http://${SPEC_S3_ENDPOINT}" \
+    run spec
 
 after_script:
   - npm run test:cover:publish
