--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
     docker run \
     --name s3 \
     -p ${SPEC_S3_ENDPOINT}:9000 \
+    -v "${TRAVIS_BUILD_DIR}/specs/s3/${SPEC_S3_BUCKET}/policy.json:/data/.minio.sys/buckets/${SPEC_S3_BUCKET}/policy.json"
     -e "MINIO_ACCESS_KEY=${SPEC_AWS_ACCESS_KEY}" \
     -e "MINIO_SECRET_KEY=${SPEC_AWS_SECRET_KEY}" \
     -e "MINIO_REGION=${SPEC_S3_REGION}" \
@@ -40,6 +41,7 @@ script:
     --s3-region="${SPEC_S3_REGION}" \
     --s3-bucket="${SPEC_S3_BUCKET}" \
     --s3-endpoint="http://${SPEC_S3_ENDPOINT}" \
+    --public-base-url="http://${SPEC_S3_ENDPOINT}/${SPEC_S3_BUCKET}"
     run spec
 
 after_script:
