--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "coveralls": "^3.0.0",
     "fs-extra": "^5.0.0",
     "mocha": "^5.0.5",
-    "nyc": "^11.6.0"
+    "nyc": "^11.6.0",
+    "sync-request": "^6.0.0",
+    "uuid": "^3.2.1"
   },
   "dependencies": {
     "aws-sdk": "^2.218.1",
