--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ env:
 before_install:
   - docker pull minio/minio:RELEASE.2018-03-30T00-38-44Z
   # TODO: Add public bucket policy from specs/minio/bucket/public/policy.json
+  - echo "specs/s3/${SPEC_S3_BUCKET}/policy.json:/data/.minio.sys/buckets/${SPEC_S3_BUCKET}/policy.json"
   - |
     docker run \
     --name s3 \
     -p ${SPEC_S3_ENDPOINT}:9000 \
-    -v "${TRAVIS_BUILD_DIR}/specs/s3/${SPEC_S3_BUCKET}/policy.json:/data/.minio.sys/buckets/${SPEC_S3_BUCKET}/policy.json" \
     -e "MINIO_ACCESS_KEY=${SPEC_AWS_ACCESS_KEY}" \
     -e "MINIO_SECRET_KEY=${SPEC_AWS_SECRET_KEY}" \
     -e "MINIO_REGION=${SPEC_S3_REGION}" \
