--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ services:
   - docker
 
 env:
-  - |
-    SPEC_AWS_ACCESS_KEY=AwsAccessKey \
-    SPEC_AWS_SECRET_KEY=AwsSecretKey \
-    SPEC_S3_REGION=us-east-1 \
-    SPEC_S3_BUCKET=public \
-    SPEC_S3_ENDPOINT=127.0.0.1:9000
+  global:
+    - SPEC_AWS_ACCESS_KEY=AwsAccessKey
+    - SPEC_AWS_SECRET_KEY=AwsSecretKey
+    - SPEC_S3_REGION=us-east-1
+    - SPEC_S3_BUCKET=public
+    - SPEC_S3_ENDPOINT=127.0.0.1:9000
 
 before_install:
   - docker pull minio/minio:RELEASE.2018-03-30T00-38-44Z
