--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ env:
     - SPEC_S3_ENDPOINT=127.0.0.1:9000
 
 before_install:
-  - docker pull minio/minio:RELEASE.2018-03-30T00-38-44Z
+  - echo ${TRAVIS_BUILD_DIR}
+  - pwd
   - |
-    mkdir -p s3/data/{${SPEC_S3_BUCKET},.minio.sys/buckets/${SPEC_S3_BUCKET}}
-    cp specs/s3/${SPEC_S3_BUCKET}/policy.json s3/data/.minio.sys/buckets/${SPEC_S3_BUCKET}
+    mkdir -p .s3/data/{${SPEC_S3_BUCKET},.minio.sys/buckets/${SPEC_S3_BUCKET}}
+    cp specs/s3/${SPEC_S3_BUCKET}/policy.json .s3/data/.minio.sys/buckets/${SPEC_S3_BUCKET}
+  - docker pull minio/minio:RELEASE.2018-03-30T00-38-44Z
   - |
     docker run \
     --name s3 \
