--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,9 @@ env:
     - SPEC_S3_ENDPOINT=127.0.0.1:9000
 
 before_install:
-  - echo ${TRAVIS_BUILD_DIR}
   - pwd
-  - |
-    mkdir -p .s3/data/{${SPEC_S3_BUCKET},.minio.sys/buckets/${SPEC_S3_BUCKET}}
-    cp specs/s3/${SPEC_S3_BUCKET}/policy.json .s3/data/.minio.sys/buckets/${SPEC_S3_BUCKET}
+  - mkdir -p .s3/data/{${SPEC_S3_BUCKET},.minio.sys/buckets/${SPEC_S3_BUCKET}}
+  - cp specs/s3/${SPEC_S3_BUCKET}/policy.json .s3/data/.minio.sys/buckets/${SPEC_S3_BUCKET}
   - docker pull minio/minio:RELEASE.2018-03-30T00-38-44Z
   - |
     docker run \
@@ -29,7 +27,7 @@ before_install:
     -e "MINIO_ACCESS_KEY=${SPEC_AWS_ACCESS_KEY}" \
     -e "MINIO_SECRET_KEY=${SPEC_AWS_SECRET_KEY}" \
     -e "MINIO_REGION=${SPEC_S3_REGION}" \
-    -v "s3/data:/data:rw" \
+    -v "${TRAVIS_BUILD_DIR}/.s3/data:/data:rw" \
     -d minio/minio:RELEASE.2018-03-30T00-38-44Z \
     server /data
 
